[tool.poetry]
name = "airbyte_actions"
version = "0.1.1"
description = "Sample plugin for aircmd"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
mypy = "^1.2.0"
pydantic = "^1.10.7"
# uncomment for local development
aircmd = { path = "../aircmd" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
