[tool.poetry]
name = "airbyte_actions"
version = "0.1.3"
description = "Sample plugin for aircmd"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.11"
# uncomment for local development
aircmd = { path = "../aircmd" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."aircmd.plugins"]
airbyte_actions = "airbyte_actions.main:actions"
